# semantic-release-python-sample

./: .releaserc  .releaserc.yml  LICENSE  Makefile  README.md  pyproject.toml  release_package.sh
.github/workflows/: release.yml  test.yml
sample_package/: sample_function.py
tests/: test_sample_function.py
