[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = ""
authors = ["Yann <yann.leguilly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
pylint = "^2.10.2"
pytest-cov = "^2.12.1"
mypy = "^0.910"
isort = "^5.9.3"
coverage-badge = "^1.0.1"
pylint-fail-under = "^0.3.0"
anybadge = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.pylint.messages_control]
# C0114: missing-module-docstring
disable = "C0330, C0326, C0114"

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.pylint.format]
max-line-length = "88"

[tool.pylint.MASTER]
extension-pkg-whitelist = ["lxml"]

[tool.mypy]
namespace_packages = true
# Disallow dynamic typing
disallow_any_unimported = false
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
# disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handlng
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressing errors
show_none_errors = true
ignore_errors = false

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
# implicit_reexport = false
strict_equality = true

# Configuring error messages
# show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true
# show_absolute_path = true

# Miscellaneous
warn_unused_configs = true
